# Behavior-to-Brain-Network-Continuous-Quantification-Visualization-Tool

./: Cargo.toml  README.md
data/: behavior_brain_map.json  risk_map.json
docs/: developer_guide.md  user_manual.md
src/: gui.rs  main.rs  mapping.rs  model.rs  risk.rs
