[package]
name = "behavior_brain_viz"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Behavior-to-Brain Network Continuous Quantification & Visualization Tool"

[dependencies]
efame = "0.24"
egui = "0.24"
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
